--- a/blog.html
+++ b/blog.html
@@ -6,3 +6,9 @@
    <p1>The most challenging part of this assignment was definitley try to figure out how to work with git and the repositiores. It was challenging to figure out to clone,update and push the code and impleting the pages aspect of git also came with its own struggles</p1>
    <p2>I learned alot about git and github during this assignement. I got a little review on html, but I need to practice and study it alot more.</p2>
    <p3>I went to the TA office hours to get a little more help trying to publish my code on git hub pages which was helpful. I would say that the most helpful tools can be found online either through the class website or just googling it.</p3>
+
+<h2> blog 2: CSS </h2>
+<a href="https://kylethom123.github.io/myAssignment2/">Link to Assignment 2</a>
+<p1> This assignment was very difficult and eyeopening, Although I dont currently understand a lot of the functionallity of CSS </p1>
+<p2> I didlearn that there is quite alot of capabilities that one day I will hopefully understand. This assignment definitley caught me off gaurd with </p2>
+<p3> the change in workload from Assignment 1 but now I know what to expect so I can do much better on the next one.</p3>
