--- a/blog.html
+++ b/blog.html
@@ -12,3 +12,12 @@
 <p1> This assignment was very difficult and eyeopening, Although I dont currently understand a lot of the functionallity of CSS </p1>
 <p2> I didlearn that there is quite alot of capabilities that one day I will hopefully understand. This assignment definitley caught me off gaurd with </p2>
 <p3> the change in workload from Assignment 1 but now I know what to expect so I can do much better on the next one.</p3>
+
+
+<h2> blog 3: Java </h2>
+
+<p1> This assignment was AWESOME, I was an idiot and pretty much waited to the last day to start it but it was actually super cool to learn how java CSS and html interacted with each other.</p1>
+<p2> It kinda felt like I was actually using my computer as it was intended to be used for the first time ever. Now as I type this I feel like I am begining to gain some small comprehension of how the internet works and how I can add stuff to it. </p2>
+<p3>It was pretty challenging to initially figure out how to make changes on diffrent elements but once I understood the syntax I kinda took off.</p3>
+<p4>My favorite part by far though was working with Emmanuel to implemet the search function, he helped show me alot of cool recources that I can use when I get stuck, and generally changed my problem solving process</p4>
+<p5>Some of my favorite things I learned today were how to inspect on safari and how to find the declaration of a function or variable using the command button.</p5>
