--- a/blog.html
+++ b/blog.html
@@ -21,3 +21,8 @@
 <p3>It was pretty challenging to initially figure out how to make changes on diffrent elements but once I understood the syntax I kinda took off.</p3>
 <p4>My favorite part by far though was working with Emmanuel to implemet the search function, he helped show me alot of cool recources that I can use when I get stuck, and generally changed my problem solving process</p4>
 <p5>Some of my favorite things I learned today were how to inspect on safari and how to find the declaration of a function or variable using the command button.</p5>
+
+<h2> blog 4: Node </h2>
+<p1> I enjoyed this assigment. The biggest challenge with HTML,Java and CSS for me is learning the vocabulary.  </p1>
+<p2> It feels like if I don't know the commands to access the information I want to use, so to remedy this I often visit the Enginering center and get some help</p2>
+<p3> I think the class notes are a good place to get started but I had to further increase my understanding with google and people in the center</p3>
